--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "tabs",
+      "contextMenus",
+      "storage"
     ]
   }
 }
